Nav contrast fix

--- a/stylesheets/partials/features/_navigation.scss
+++ b/stylesheets/partials/features/_navigation.scss
@@ -190,7 +190,7 @@
 		}
 
 		nav {
-			background-color: #0f9092;
+			background-color: $green;
 			left: 0;
 			position: absolute;
 			top: 3em;
